<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:layoutDirection="ltr"
    android:background="@drawable/newone">

    <EditText
        android:padding="5dp"
        android:drawableStart="@drawable/ic_phonecall"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/edtPhoneProfile"
        android:layout_marginTop="15dp"
        android:hint="@string/txtPhoneProfileHint"
        android:background="@drawable/custom_inpuut"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:padding="5dp"
        android:drawableStart="@drawable/ic_emaile"
        android:background="@drawable/custom_inpuut"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/edtEmailProfile"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtPhoneProfile"
        android:hint="@string/txtEmailProfileHint"
        android:minEms="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:padding="5dp"
        android:background="@drawable/custom_inpuut"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/edtPassProfile"
        android:layout_below="@id/edtEmailProfile"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtPassProfileHint"
        android:drawableStart="@drawable/ic_password"
        android:minEms="8"
        android:inputType="textVisiblePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btnProfile"
        android:background="@drawable/custom_inpuut"
        android:layout_marginTop="20dp"
        android:textColor="#aeaeae"
        android:layout_below="@id/edtPassProfile"
        android:layout_centerHorizontal="true" />

</LinearLayout>