<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/registeerr">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#FFF"
            android:text="@string/pleas_enetr_username_and_password"
            android:fontFamily="serif" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#DDF1F0"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="Register"
            android:textStyle="bold|italic"

            android:fontFamily="@font/scriptmtbold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextPhoneReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="#FFF"
            app:startIconTint="#FFF"
            app:endIconTint="#FFFF">

            <EditText
                android:id="@+id/edtPhoneRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/custom_input"
                android:layout_marginTop="15dp"
                android:textColor="#aeaeae"

                android:textColorHint="#aeaeae"
                android:textColorLink="#aeaeae"
                android:textColorHighlight="#aeaeae"
                android:hint="@string/hintPhone"
                android:ems="10"
                android:drawableLeft="@drawable/ic_profile"
                android:fontFamily="@font/verdana" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextPassReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="#FFF"
            app:startIconTint="#FFF"
            app:endIconTint="#FFFF">

            <EditText
                android:id="@+id/edtPassRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/custom_input"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/hintPassword"
                android:textColor="#aeaeae"
                android:textColorHighlight="#aeaeae"
                android:textColorHint="#aeaeae"
                android:textColorLink="#aeaeae"

                android:ems="10"
                android:drawableLeft="@drawable/ic_password"
                android:fontFamily="@font/verdana" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:theme="@style/PrimaryFlatButton"
            android:textColor="#aeaeae"
            android:background="@drawable/custom_input"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/btnRegister" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>